# NavIMARC

./: README  main.cpp  scanseDriver.cpp  sweep.launch  sweep2scan.launch  test  view_sweep_laser_scan.launch  view_sweep_pc2.launch
boat/launch/: sweep2scan.launch
boat/src/: main.cpp  slam_gmapping.cpp  slam_gmapping.h  sweepDriver.cpp
boat_sim/: README  sim1.bash
boat_sim/imarc_description/: allTopics.rviz  package.xml
boat_sim/imarc_description/launch/: cam.launch  imarc.launch  imarc.launch~  test
boat_sim/imarc_description/urdf/: boat_test.urdf  imarc.gazebo  imarc.gazebo~  imarc.xacro  imarc.xacro~
boat_sim/imarc_gazebo/: CMakeLists.txt  package.xml
boat_sim/imarc_gazebo/launch/: test.launch  test.launch~  water.launch
boat_sim/imarc_gazebo/worlds/: CMakeLists.txt  buoy.world  buoy.world~  test.world  test.world~  water.world
boat_sim/marc1/: CMakeLists.txt  package.xml
boat_sim/marc1/src/: .format_scan.cpp.swp  format_scan.cpp  pwm_generator.py  pwm_generator.py~
boat_sim/prop_plugin/: CMakeLists.txt  CMakeLists.txt~  prop_plugin.cc  prop_plugin.cc~
boat_sim/ros_sim/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
boat_sim/ros_sim/src/: keyboard_input.cpp  keyboard_input.cpp~  odom.cpp  odom.cpp~
imarc_description/: CMakeLists.txt
